# mbb-devel

./: .gitignore  CMakeLists.txt  IDEAS  INSTALL  MANUAL  Makefile  NOTES  TODO  common.mk  install.sh  mbb.ppt
cmake_modules/: FindReadline.cmake
include/: debug.h  macros.h  net.h  shared.h  strconv.h  strerr.h  trash.h  variant.h  xmlparser.h  xmltag.h
lib/: CMakeLists.txt  Makefile  debug.c  net.c  re.c  strconv.c  trash.c  variant.c  xmlparser.c  xmltag.c
mbbd/: CMakeLists.txt  Makefile  datalink.c  datalink.h  http.c  http.h  inet.c  inet.h  inetslicer.c  inetslicer.h  main.c  map.c  map.h  mbbauth.c  mbbauth.h  mbbauthkeys.c  mbbcap.h  mbbconsumer.c  mbbconsumer.h  mbbconsumerman.c  mbbdb.c  mbbdb.h  mbbdbconsumer.c  mbbdbconsumer.h  mbbdbgateway.c  mbbdbgateway.h  mbbdbgroup.c  mbbdbgroup.h  mbbdbgwlink.c  mbbdbgwlink.h  mbbdbinetpool.c  mbbdbinetpool.h  mbbdbload.c  mbbdbload.h  mbbdboperator.c  mbbdboperator.h  mbbdbunit.c  mbbdbunit.h  mbbdbuser.c  mbbdbuser.h  (+84 more)
mbbd/config/: mbbrc.default.in  mbbrc.in
mbbd/modules/: CMakeLists.txt  Makefile  module.mk
mbbd/modules/attr/: CMakeLists.txt  attr.c  attr.h  dbattr.c  dbattr.h  interface.h  main.c
mbbd/modules/auth_apache/: .gitignore  CMakeLists.txt  include.mk  main.c
mbbd/modules/auth_salt/: CMakeLists.txt  main.c
mbbd/modules/map_reload/: CMakeLists.txt  main.c
mbbd/modules/netflow/: CMakeLists.txt  calcstat.c  calcstat.h  flow.c  flow.h  grepstat.c  include.mk  main.c  netflow.h  pathtree.c  pathtree.h  unitstat.c  unitstat.h
mbbd/modules/pinger/: main.c  pingerloop.c  pingerloop.h
mbbd/modules/private/: CMakeLists.txt  interface.h  main.c
mbbd/modules/stat/: CMakeLists.txt  entry.h  interface.h  main.c  mbbstat.c  mbbstat.h
mbbd/modules/var/: main.c
mbbd/sql/: func.sql  table.sql
mbbsh/: CMakeLists.txt  Makefile  auth.c  auth.h  caution.c  caution.h  handler.c  handler.h  header.h  lua.mk  luaenv.c  luaenv.h  main.c  methods.c  methods.h  nettalker.c  nettalker.h
mbbsh/lua/: attrman.lua  consman.lua  groupman.lua  gwman.lua  init.lua  kit.lua  linkman.lua  logman.lua  module.lua  netflow.lua  operman.lua  other.lua  pinger.lua  set.lua  statman.lua  taskman.lua  unitipman.lua  unitman.lua  userman.lua  varman.lua  xml.lua
sql/: attr_install.sql  attr_uninstall.sql  func.sql  pinger.sql  pinger_uninstall.sql  table.sql
upgrade/to0.0.9/: README  func.sql  script.sql
